# chatddx

./: .env  .envrc  .gitignore  .gitmodules  README.md  flake.nix  history.txt  index med report issue utan funktion.docx  log.json  manage.py  pyproject.toml  ~$dex med report issue utan funktion.docx
backend/: conftest.py  history.txt  pyproject.toml  secret_key
backend/api/: admin.py  ddxtest.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/api/management/commands/: ddxtest.py
backend/api/migrations/: 0008_aiuser.py  0012_remove_testbattery_procedure_and_more.py  0013_rename_testbattery_ddxtest_and_more.py  0018_ddxtestresult_chat.py  0020_diagnosis_remove_ddxtestcase_chats_and_more.py  0023_ddxtestrun_chat.py  0030_ddxtestrun_status.py  0031_alter_ddxtestrun_status.py
backend/api/templates/admin/api/DDXTest/: change_list.html
backend/app/: settings.py  urls.py
backend/app/locale/sv/LC_MESSAGES/: django.po
backend/cms/: admin.py  models.py  translation.py  urls.py  views.py
backend/cms/migrations/: 0002_rename_cmsassistantview_assistantpage_and_more.py  0005_assistantpage_copybutton_assistantpage_copybutton_en_and_more.py
backend/logs/: log.json
backend/src/chatddx/: conftest.py  main.py  utils.py
backend/src/chatddx/core/: decimals.py  fields.py  models.py
backend/src/chatddx/core/tests/users/: test-users.toml
backend/src/chatddx/data/: registry.toml
backend/src/chatddx/data/output_types/: some-output_type.json
backend/src/chatddx/django/: README.md  api.py  manage.py  settings.py  settings_base.py  urls.py
backend/src/chatddx/django/api/: apps.py  tasks.py
backend/src/chatddx/django/api/migrations/: 0007_alter_prompthistory_options_prompthistory_timestamp.py  0009_testprocedure_testbattery_testresult.py  0016_ddxtest_groups.py  0017_rename_models_ddxtest_chats.py  0019_rename_ddxtest_ddxtestcase_alter_ddxtestresult_run.py  0021_alter_ddxtestcase_name_alter_ddxtestgroup_name_and_more.py  0024_remove_openaichat_messages_openaichat_messages.py  0025_openaichat_messages.py  0027_remove_ddxcaseresult_chat.py  (+1 more)
backend/src/chatddx/django/cms/: admin.py  apps.py  urls.py
backend/src/chatddx/django/orm/: apps.py
backend/src/chatddx/django/repo/: apps.py  branches.py  main.py  registry.py  schemas.py  session.py  trail_map.py  utils.py
backend/src/chatddx/django/settings/: __init__.py  dev.py  main.py  unfold.py
backend/src/chatddx/django/tests/: test_admin_timeline.py  test_api.py
backend/src/chatddx/history/: models.py  proxies.py  schemas.py  session.py
backend/src/chatddx/history/tests/: test_message_spec.py
backend/src/chatddx/registry/: main.py  schemas.py
backend/src/chatddx/registry/tests/: test_registry.py
backend/src/chatddx/repo/: base.py  branch_models.py  form_data.py  form_data_in.py  form_data_out.py  main.py  proxies.py  trail_models.py  trail_schema_refs.py  trail_schemas.py
backend/src/chatddx/repo/loaders/: branches.py  cache.py  model_loader.py  nonsense.py  related_array_fields.py  trail.py
backend/src/chatddx/repo/shufflers/: main.py
backend/src/chatddx/repo/sql/: trail_triggers.sql
backend/src/chatddx/repo/tests/: identity_boundary.py  test_branches.py  test_fingerprint.py  test_trail.py  test_type_pipeline.py
backend/src/chatddx/runtime/: builder.py  runners.py  tools.py
backend/src/chatddx/runtime/tests/: test_ddx.py  test_llm_basics.py
backend/src/chatddx_backend/: settings.py  urls.py
backend/src/chatddx_backend/agents/: admin.py  apps.py  branches.py  config.py  evaluation_service.py  experiments.toml  library.py  library.toml  main.py  managers.py  models.py  models_ai.py  output_types.py  pydantic_ai.py  registry.py  result_schemas.py  runtime.py  schema.py  schemas.py  services.py  session.py  specs.py  state.py  tools.py  trail_map.py  type_map.py  types.py  utils.py
backend/src/chatddx_backend/agents/admin/: __init__.py  agent.py  base.py  forms.py  history.py  main.py  proxies.py  schemas.py  utils.py
backend/src/chatddx_backend/agents/data/: registry.toml
backend/src/chatddx_backend/agents/fixtures/: llama_test_data.py
backend/src/chatddx_backend/agents/migrations/: 0001_initial.py  0002_agent_connection_identity_message_outputtype_and_more.py  0002_rename_name_toolmodel_command.py  0003_alter_outputtype_options_and_more.py  0003_superagent.py  0004_remove_agentmodel_coercion_strategy_and_more.py
backend/src/chatddx_backend/agents/models/: __init__.py  agent.py  chat.py  choices.py  enums.py  history.py  loader.py  session.py  trail.py  validators.py
backend/src/chatddx_backend/agents/pydantic_ai/: agent.py  builder.py  context.py  runners.py  tools.py  utils.py
backend/src/chatddx_backend/agents/sql/: immutability_function.sql  immutability_trigger.sql  trail_triggers.sql
backend/src/chatddx_backend/agents/tests/: conftest.py  data.py  library.toml  registry.toml  test_admin_timeline.py  test_basics.py  test_branches.py  test_ddx.py  test_fingerprint.py  test_llm_basics.py  test_message_spec.py  test_model.py  test_pydantic_runners.py  test_registry.py  test_schema.py  test_session.py  test_trail.py
backend/src/chatddx_backend/agents/trail/: __init__.py  cache.py  loader.py  model.py  models.py  schemas.py  spec_loader.py
backend/src/chatddx_backend/api/: admin.py  ddxtest.py  models.py  tests.py  urls.py  views.py
backend/src/chatddx_backend/api/migrations/: 0006_prompthistory.py  0010_alter_testbattery_options_testbattery_expect_and_more.py  0011_testbattery_name.py  0014_alter_ddxtest_options_alter_ddxtest_name.py  0015_ddxtestgroup_ddxtestresult_output_ddxtestrun_and_more.py  0022_alter_diagnosis_options_remove_ddxtestcase_diagnosis_and_more.py  0026_ddxcaseresult_ddxcaseresult_diagnoses_and_more.py  0029_remove_ddxtestcase_expect.py  0032_ddxtestrun_snapshot.py
backend/src/chatddx_backend/cms/: models.py  translation.py  views.py
backend/src/chatddx_backend/cms/migrations/: 0003_alter_assistantpage_options_and_more.py
backend/src/chatddx_backend/formats/en/: formats.py
backend/tests/: settings.py  test_api.py
chatddx/: asgi.py  settings.py  (+3 more)
(+254 files in other folders)
