[tool.poetry]
name = "chatddx"
version = "0.1.0"
description = "chatddx"
authors = [ "Olof Silfver <olof.silfver@gmail.com>", "Alexander Holmbäck <alexander.holmback@gmail.com>" ]
readme = "README.md"
packages = [
{include="gpt"},
{include="chatddx"},
]

[tool.poetry.scripts]
setup = 'chatddx.setup:run'

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
gunicorn = "^21.2.0"
dj-user-login-history = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
