[project]
name = "chatddx"
version = "0.0.0+dev"
description = "chatddx backend"
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0.2",
  "deepdiff>=9.1.0",
  "django-cors-headers>=4.9.0",
  "django-crispy-forms>=2.6",
  "django-fernet-encrypted-fields>=0.3.1",
  "django-modeltranslation>=0.19.19",
  "django-ninja>=1.6.2",
  "django-typer>=3.7.0",
  "django-unfold>=0.93.0",
  "google-generativeai>=0.8.6",
  "gunicorn>=25.0.1",
  "inspect-ai>=0.3.226",
  "jinja2>=3.1.6",
  "jsonschema>=4.26.0",
  "markdown>=3.10.2",
  "orjson>=3.11.7",
  "prompt-toolkit>=3.0.50",
  "psycopg[binary]>=3.3.2",
  "pydantic-ai-slim[openai]>=1.97.0",
  "time-machine>=3.2.0",
  "tomli-w>=1.2.0",
]

[project.scripts]
chatddx = "chatddx.main:app"
django = "chatddx.django.manage:main"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = ["isort>=8.0.0", "ruff>=0.15.0"]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-django>=4.11.1",
  "pytest-recording>=0.13.4",
]
typing = ["django-types>=0.23.0", "pyright>=1.1.408"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
include = ["src"]
extraPaths = ["src/chatddx/django"]
ignore = ["**/migrations/*"]
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false

[tool.django-stubs]
django_settings_module = "chatddx.django.settings"

[tool.pytest]
addopts = ["--liveserver", "localhost:8082"]
