[project]
name = "chatddx-backend"
version = "0.1.0"
description = "Django instance serving chatddx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1.0",
  "celery>=5.4.0",
  "dj-user-login-history>=1.0.6",
  "django-celery-results>=2.5.1",
  "django-modeltranslation>=0.19.7",
  "django-unfold>=0.49.1",
  "flower>=2.0.1",
  "gunicorn>=23.0.0",
  "markdown2>=2.5.0",
  "openai>=1.61.1",
  "psycopg2-binary>=2.9.10",
  "redis>=5.2.1",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = [
  "ruff>=0.7.2",
]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "pytest-django>=4.9.0",
]
typing = [
  "django-types>=0.23.0",
  "pyright>=1.1.408",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.django-stubs]
django_settings_module = "chatddx_backend.settings"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
ignore = ["**/migrations/*"]
pythonPlatform = "Linux"
reportMissingTypeArgument = "information"
reportPrivateUsage = "information"
typeCheckingMode = "standard"
reportAttributeAccessIssue = false

[tool.ruff]
extend-exclude = ["tests"]
