[project]
name = "chatddx-backend"
version = "0.0.0+dev"
description = "Django instance serving chatddx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0.2",
  "celery>=5.6.2",
  "dj-user-login-history>=1.0.6",
  "django-celery-results>=2.6.0",
  "django-modeltranslation>=0.19.19",
  "django-unfold>=0.78.1",
  "flower>=2.0.1",
  "gunicorn>=25.0.1",
  "markdown2>=2.5.4",
  "openai>=2.16.0",
  "psycopg2-binary>=2.9.11",
  "redis>=7.1.0",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = [
  "ruff>=0.15.0",
]
test = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-django>=4.11.1",
]
typing = [
  "django-types>=0.23.0",
  "pyright>=1.1.408",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.django-stubs]
django_settings_module = "chatddx_backend.settings"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
ignore = ["**/migrations/*"]
pythonPlatform = "Linux"
reportMissingTypeArgument = "information"
reportPrivateUsage = "information"
typeCheckingMode = "standard"
reportAttributeAccessIssue = false

[tool.ruff]
extend-exclude = ["tests"]
